--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,10 +20,10 @@
       </tbody>
     </table>
     <div>
-      <button class="btn btn-secondary btn-lg mt-5" (click)="shuffleArray()">Shuffle array!</button>
+      <button class="btn btn-secondary btn-lg mt-5" (click)="shuffleArray()">Generete Secret Santas!</button>
     </div>
     <div>
-      <button class="btn btn-secondary btn-lg mt-5" (click)="updateList()">Update list!</button>
+      <button class="btn btn-primary btn-lg mt-5" (click)="updateList()">Update list!</button>
     </div>
   </div>
 </div>
