--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -3,7 +3,7 @@
     Name of employee
   </div>
   <div class="card-body">
-    <h4 *ngIf="_employee != undefined">{{_employee.email}}</h4>
+    <h4 *ngIf="_employee != undefined">{{_employee.username}}</h4>
     <button class="btn btn-danger animate" (click)="remove()">Remove</button>
   </div>
 </div>
