--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,16 +7,19 @@
     <div class="card-body">
       <form [formGroup]="registerForm" (submit)="onSubmit()">
         <div class="form-group col-12">
-            <label class="form-label">Email</label>
-            <input type="email" class="form-control" formControlName="email">
-            <span class="error-block" *ngIf="!registerForm.get('email').valid && registerForm.get('email').touched">
-              <span *ngIf="registerForm.get('email').errors.required" class="error-block">Please enter valid email !</span>
+            <label class="form-label">Username</label>
+            <input type="emausernameil" class="form-control" formControlName="username">
+            <span class="error-block" *ngIf="!registerForm.get('username').valid && registerForm.get('username').touched">
+              <span *ngIf="registerForm.get('username').errors.required" class="error-block">Please enter valid username !</span>
             </span>
         </div>
 
         <div class="form-group col-12">
           <label class="form-label">First name</label>
           <input type="text" class="form-control" formControlName="firstName">
+          <span class="error-block" *ngIf="!registerForm.get('firstName').valid && registerForm.get('firstName').touched">
+            <span *ngIf="registerForm.get('firstName').errors.required" class="error-block">Please enter first name !</span>
+          </span>
         </div>
 
         <div class="form-group col-12">
