--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
         <tr>
           <th scope="col">First Name</th>
           <th scope="col">Last Name</th>
-          <th scope="col">Email</th>
+          <th scope="col">Username</th>
           <th scope="col">Secret Santa</th>
           <th scope="col">Delete</th>
         </tr>
@@ -14,9 +14,9 @@
       <tbody *ngFor = "let employee of employess; let i = index">
         <td>{{employee.firstName}}</td>
         <td>{{employee.lastName}}</td>
-        <td>{{employee.email}}</td>
+        <td>{{employee.username}}</td>
         <td>{{employee.secretSanta}}</td>
-        <td><button class="btn btn-danger" (click)="removeEmployee(i)" [disabled]="employee.email == 'admin@admin.com'">X</button></td>
+        <td><button class="btn btn-danger" (click)="removeEmployee(i)" [disabled]="employee.username == 'admin'">X</button></td>
       </tbody>
     </table>
     <div>
