comment-delete-and-button-name-change

--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -30,12 +30,10 @@
 
           <div class="form-group col-12">
             <button type="submit" class="btn btn-primary btn-lg" [disabled]="!employeeForm.valid">Add employee!</button>
-            <!-- <button class="btn btn-secondary btn-lg ml-1" type="button" (click)="shuffleArray()">Select secret santa!</button> -->
-            <!-- <button class="btn btn-secondary btn-lg ml-1" type="button" (click)="shuffleArray()">Select secret santa!</button> -->
             <button class="btn btn-success btn-lg"
                     style="float: right;" type="button"
                     data-toggle="modal"
-                    data-target="#exampleModal">Show pairs!</button>
+                    data-target="#exampleModal">Show employees!</button>
           </div>
 
         </form>
